--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "jose": "^5.2.0",
     "next": "14.0.4",
     "pg": "^8.11.3",
     "react": "^18",
